fix: ajustando url padrao swagger
